--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -177,4 +177,4 @@ jobs:
 #       TODO
         
     - name: QPM Publish
-      run: ./QPM/qpm-rust publish ${{secrets.PUBLISH_KEY}}
+      run: ./QPM/qpm-rust publish "${{secrets.PUBLISH_KEY}}"
