--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ if (DEFINED TEST_BUILD)
     add_compile_definitions(TEST_LIST)
     add_compile_definitions(TEST_STRING)
     add_compile_definitions(TEST_HOOK)
+    add_compile_definitions(TEST_WRAPPER)
 endif()
 
 add_library(
