--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,6 +78,6 @@ jobs:
           tag_name: ${{ github.event.inputs.version }}
           files: |
             ./build/${{ steps.libname.outputs.NAME }}
-            ./build/debug_${{ steps.libname.outputs.NAME }}
+            ./build/debug/${{ steps.libname.outputs.NAME }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
