Fix il2cpp thread util to be more or less equivalent to std::thread, and add tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ function(setup_target target add_test)
             TEST_LIST
             TEST_STRING
             TEST_HOOK
+            TEST_THREAD
         )
     endif()
 
