Update version getting

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,12 +31,11 @@ jobs:
           echo ${{ steps.setup-ndk.outputs.path }} > ${GITHUB_WORKSPACE}/ndkpath.txt
           cat ${GITHUB_WORKSPACE}/ndkpath.txt
 
-      - name: Get Tag Version
-        id: get_tag_version
+      - name: Extract version
+        id: version
         run: |
-          echo ${GITHUB_REF#refs/tags/}
-          echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
-          echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
+          echo "TAG=${GITHUB_REF#refs/tags/}" >> ${GITHUB_OUTPUT}
+          echo "VERSION=${GITHUB_REF#refs/tags/v}" >> ${GITHUB_OUTPUT}
 
       - name: QPM Rust Action
         uses: Fernthedev/qpm-rust-action@main
@@ -50,8 +49,8 @@ jobs:
           publish: true
           publish_token: ${{secrets.PUBLISH_KEY}}
 
-          version: ${{ steps.get_tag_version.outputs.VERSION }}
-          tag: ${{ steps.get_tag_version.outputs.TAG }}
+          version: ${{ steps.version.outputs.VERSION }}
+          tag: ${{ steps.version.outputs.TAG }}
 
           # set to true if applicable, ASSUMES the file is already a release asset
           qpm_release_bin: true
