--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,6 +73,7 @@ jobs:
         id: upload_file_release
         uses: softprops/action-gh-release@v0.1.15
         with:
+          tag_name: ${{ steps.version.outputs.TAG }}
           files: |
             ./build/${{ steps.libname.outputs.NAME }}
             ./build/debug/${{ steps.libname.outputs.NAME }}
