--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -25,14 +25,9 @@ jobs:
 
       - uses: seanmiddleditch/gha-setup-ninja@v3
 
-      # Use canary NDK to avoid lesser known compile bugs
-      - name: Setup canary NDK
-        id: setup-ndk
-        uses: ./.github/actions/canary-ndk
-
       - name: Create ndkpath.txt
         run: |
-          echo ${{ steps.setup-ndk.outputs.ndk-path }} > ${GITHUB_WORKSPACE}/ndkpath.txt
+          echo $ANDROID_NDK_HOME > ${GITHUB_WORKSPACE}/ndkpath.txt
           cat ${GITHUB_WORKSPACE}/ndkpath.txt
 
       - name: QPM Rust Action
@@ -61,14 +56,14 @@ jobs:
           echo ::set-output name=NAME::"${files[0]}"
 
       - name: Upload non-debug artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.libname.outputs.NAME }}
           path: ./build/${{ steps.libname.outputs.NAME }}
           if-no-files-found: error
 
       - name: Upload debug artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: debug_${{ steps.libname.outputs.NAME }}
           path: ./build/debug/${{ steps.libname.outputs.NAME }}
